samples/_failures_safe/1761076805_a82bec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d90de1ee.c: In function ‘main’:
./samples/SAFE/__tmp_d90de1ee.c:136:9: error: expected declaration or statement at end of input
  136 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_d90de1ee.c:136:9: error: expected declaration or statement at end of input
